@@ -28,7 +28,6 @@ Classes
 
 .. autoclass:: XYZParser
    :members:
-   :inherited-members:
 
 """
 from __future__ import absolute_import
