@@ -201,6 +201,7 @@ For details see the report for `Issue 87`_.
                          'data/*.xml',
                          'data/coordinates/*',
                          'data/*xvg',
+                         'data/*.mmtf', 'data/*.mmtf.gz',
                         ],
           },
           classifiers=CLASSIFIERS,
